# cuda-cryptography

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench.cpp
docs/: benchmark-methodology.md  design.md  poseidon2-parameters.md
include/cpb/: cuda_primitives.hpp  field.hpp  merkle.hpp  mlkem.hpp  ntt.hpp  poseidon2_merkle.hpp  sha256.hpp  vector_ops.hpp
scripts/: bench.sh  build.sh  format.sh  test.sh
src/: cuda_primitives.cu  merkle_cpu.cpp  mlkem_cpu.cpp  ntt_cpu.cpp  poseidon2_merkle_cpu.cpp  sha256.cpp  vector_cpu.cpp
tests/: correctness_tests.cpp
